--- a/webui/public/index.html
+++ b/webui/public/index.html
@@ -9,15 +9,17 @@
 </head>
 
 <body>
+  <div id="content-wrapper">
   <header>
     <h1>Cloudwerte</h1>
   </header>
-  <div id="react-section"></div>
-  <footer>
-    <p>&copy; Samuel Markham 2025.</p>
-    <p>Released under the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GNU General Public
-        License.</a></p>
-  </footer>
+    <div id="react-section"></div>
+    <footer>
+      <p>&copy; Samuel Markham 2025.</p>
+      <p>Released under the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GNU General Public
+          License.</a></p>
+    </footer>
+  </div>
 </body>
 
 </html>
